CLOUDP-290015 - Migrate to Lucene 10.1 APIs (#5389)
Co-authored-by: rithue <rithue2000@gmail.com>
Co-authored-by: Evan Darke <evancdarke@gmail.com>
Co-authored-by: William Zhou <william.zhou@mongodb.com>
Co-authored-by: Jonathan Feng <jonathan.feng@mongodb.com>
Co-authored-by: Ankesh Airon <ankesh.airon@mongodb.com>
GitOrigin-RevId: 6c77ad664fce7625f2ae71ff2a7ca3e88c7b02b3